# reqwest_sample-ruby

./: CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  reqwest_sample.gemspec
.github/workflows/: main.yml
ext/reqwest_sample/: Cargo.toml  extconf.rb
ext/reqwest_sample/src/: lib.rs
lib/: reqwest_sample.rb
lib/reqwest_sample/: client.rb  version.rb
sig/: reqwest_sample.rbs
test/: test_helper.rb  test_reqwest_sample.rb
